--- a/index.html
+++ b/index.html
@@ -1,79 +1,117 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="et">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Site — Starter</title>
-  <meta name="description" content="A simple static starter site." />
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Turtlo – Veebiturundusagentuur</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Poppins', sans-serif;
+            background: #ffffff;
+            color: #111;
+        }
+
+        header {
+            padding: 40px;
+            text-align: center;
+            max-width: 800px;
+            margin: auto;
+        }
+
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 10px;
+            color: #0ECC70;
+        }
+
+        .cta {
+            display: inline-block;
+            margin-top: 20px;
+            background: #0ECC70;
+            color: white;
+            padding: 16px 34px;
+            font-size: 1.1rem;
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        .services {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            margin: 60px auto;
+            max-width: 1100px;
+            flex-wrap: wrap;
+        }
+
+        .card {
+            background: #f7f7f7;
+            width: 300px;
+            padding: 25px;
+            border-radius: 12px;
+            text-align: center;
+            box-shadow: 0 2px 12px rgba(0,0,0,0.06);
+        }
+
+        .card h3 {
+            color: #0ECC70;
+            margin-bottom: 12px;
+        }
+
+        .why {
+            max-width: 900px;
+            margin: 80px auto;
+            text-align: center;
+            padding: 0 20px;
+        }
+
+        footer {
+            background: #0ECC70;
+            color: white;
+            padding: 30px;
+            text-align: center;
+            margin-top: 80px;
+        }
+    </style>
 </head>
 <body>
-  <header class="site-header">
-    <div class="container">
-      <a class="brand" href="/">Turtlo</a>
-      <nav class="nav">
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-      </nav>
-      <button id="menuToggle" class="menu-toggle" aria-label="Toggle menu">☰</button>
-    </div>
-  </header>
 
-  <main>
-    <section class="hero">
-      <div class="container">
-        <h1>Turtlo — Veebiturundusagentuur</h1>
-        <p class="lead">Fast, simple, and easy to deploy. Edit this file and push to GitHub to publish.</p>
-        <p><a class="cta" href="#projects">See projects</a></p>
-      </div>
-    </section>
+    <header>
+        <h1>Turtlo</h1>
+        <h2>Kasvata oma ettevõtet digiturunduse abil</h2>
+        <p>Facebook & Instagram reklaamid · Google Ads · SEO</p>
+        <a class="cta" href="#contact">Võta ühendust</a>
+    </header>
 
-    <section id="about" class="container section">
-      <h2>About</h2>
-      <p>Meta/Facebook ADs, Google ADS, SEO, Sugma</p>
-    </section>
-
-    <section id="projects" class="container section grid">
-      <article class="card">
-        <h3>Project A</h3>
-        <p>Short description. Link to demo or repo.</p>
-      </article>
-      <article class="card">
-        <h3>Project B</h3>
-        <p>Short description. Link to demo or repo.</p>
-      </article>
-    </section>
-
-    <section id="contact" class="container section">
-      <h2>Contact</h2>
-      <form id="contactForm" class="form">
-        <label>
-          Name
-          <input name="name" required />
-        </label>
-        <label>
-          Email
-          <input name="email" type="email" required />
-        </label>
-        <label>
-          Message
-          <textarea name="message" rows="4" required></textarea>
-        </label>
-        <div>
-          <button type="submit" class="btn">Send</button>
+    <section class="services">
+        <div class="card">
+            <h3>Meta reklaamid</h3>
+            <p>Facebook & Instagram kampaaniad, mis toovad tulemusi.</p>
         </div>
-        <p id="formStatus" role="status" aria-live="polite"></p>
-      </form>
+        <div class="card">
+            <h3>Google Ads</h3>
+            <p>Nähtavus seal, kus kliendid juba otsivad.</p>
+        </div>
+        <div class="card">
+            <h3>SEO</h3>
+            <p>Kasvatame orgaanilist liiklust ja müüki pikas perspektiivis.</p>
+        </div>
     </section>
-  </main>
 
-  <footer class="site-footer">
-    <div class="container">
-      <small>© <span id="year"></span> MySite</small>
-    </div>
-  </footer>
+    <section class="why">
+        <h2>Miks valida Turtlo?</h2>
+        <p>
+            Oleme värske, motiveeritud ja keskendunud ainult sellele, mis töötab.
+            Sinu kasv on meie eesmärk — läbipaistvalt ja tulemustele suunatult.
+        </p>
+    </section>
 
-  <script src="script.js"></script>
+    <footer id="contact">
+        <h3>Loome midagi ägedat!</h3>
+        <p>Võta ühendust: <strong>info@turtlo.com</strong></p>
+    </footer>
+
 </body>
 </html>
