html veebilehe muudatused

--- a/index.html
+++ b/index.html
@@ -78,40 +78,43 @@
 </head>
 <body>
 
-    <header>
-        <h1>Turtlo</h1>
-        <h2>Kasvata oma ettevõtet digiturunduse abil</h2>
-        <p>Facebook & Instagram reklaamid · Google Ads · SEO</p>
-        <a class="cta" href="#contact">Võta ühendust</a>
-    </header>
+<header>
+    <h1>Turtlo</h1>
+    <h2>Nutikad digilahendused, mis aitavad sinu ettevõttel kasvada</h2>
+    <p>Meta reklaamid · Google Ads · SEO</p>
+    <a class="cta" href="#contact">Võta ühendust</a>
+</header>
 
-    <section class="services">
-        <div class="card">
-            <h3>Meta reklaamid</h3>
-            <p>Facebook & Instagram kampaaniad, mis toovad tulemusi.</p>
-        </div>
-        <div class="card">
-            <h3>Google Ads</h3>
-            <p>Nähtavus seal, kus kliendid juba otsivad.</p>
-        </div>
-        <div class="card">
-            <h3>SEO</h3>
-            <p>Kasvatame orgaanilist liiklust ja müüki pikas perspektiivis.</p>
-        </div>
-    </section>
+<section class="services">
+    <div class="card">
+        <h3>Meta reklaamid</h3>
+        <p>Tõstame nähtavust ja loome konversioone Facebookis & Instagramis täpselt õigete inimesteni jõudes.</p>
+    </div>
+    <div class="card">
+        <h3>Google Ads</h3>
+        <p>Reklaamid seal, kus kliendid juba otsivad. Optimeerime tulemusi pärisandmete põhjal.</p>
+    </div>
+    <div class="card">
+        <h3>SEO</h3>
+        <p>Orgaaniline kasv, mis kestab. Sisutöö, tehniline SEO ja kodulehe optimeerimine.</p>
+    </div>
+</section>
 
-    <section class="why">
-        <h2>Miks valida Turtlo?</h2>
-        <p>
-            Oleme värske, motiveeritud ja keskendunud ainult sellele, mis töötab.
-            Sinu kasv on meie eesmärk — läbipaistvalt ja tulemustele suunatult.
-        </p>
-    </section>
+<section class="why">
+    <h2>Miks valida Turtlo?</h2>
+    <p>Me ei tee üleliigset, ainult seda, mis töötab. Keskendume mõõdetavatele tulemustele, läbipaistvusele ja pikaajalisele partnerlusele.</p>
+    <ul style="list-style: none; padding: 0; margin-top: 20px;">
+        <li>✔ Tulemustele suunatud strateegia</li>
+        <li>✔ Läbipaistev raport ja suhtlus</li>
+        <li>✔ Paindlik ja kiire reageerimine</li>
+    </ul>
+</section>
 
-    <footer id="contact">
-        <h3>Loome midagi ägedat!</h3>
-        <p>Võta ühendust: <strong>info@turtlo.com</strong></p>
-    </footer>
+<footer id="contact">
+    <h3>Räägime sinu eesmärkidest</h3>
+    <p>Võta ühendust: <strong>info@turtlo.com</strong></p>
+</footer>
+
 
 </body>
 </html>
