--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turtlo – Veebiturundusagentuur</title>
+    <title>Turtlo – Digiturundusagentuur</title>
     <style>
         body {
             margin: 0;
@@ -12,22 +12,59 @@
             color: #111;
         }
 
+        html {
+            scroll-behavior: smooth;
+        }
+
+        /* NAVIGATION */
+        .navbar {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            padding: 18px;
+            position: sticky;
+            top: 0;
+            background: white;
+            border-bottom: 1px solid #eee;
+            z-index: 100;
+        }
+
+        .navbar a {
+            text-decoration: none;
+            color: #111;
+            font-weight: 500;
+            font-size: 1rem;
+        }
+
+        .navbar a:hover {
+            color: #0ECC70;
+        }
+
+        /* HERO */
         header {
-            padding: 40px;
+            padding: 60px 20px;
             text-align: center;
-            max-width: 800px;
+            max-width: 850px;
             margin: auto;
         }
 
         h1 {
-            font-size: 3rem;
+            font-size: 3.2rem;
             margin-bottom: 10px;
             color: #0ECC70;
         }
 
+        h2 {
+            margin-bottom: 15px;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
         .cta {
             display: inline-block;
-            margin-top: 20px;
+            margin-top: 22px;
             background: #0ECC70;
             color: white;
             padding: 16px 34px;
@@ -37,11 +74,16 @@
             font-weight: 600;
         }
 
+        .cta:hover {
+            opacity: 0.9;
+        }
+
+        /* SERVICES */
         .services {
             display: flex;
             justify-content: center;
             gap: 30px;
-            margin: 60px auto;
+            margin: 50px auto;
             max-width: 1100px;
             flex-wrap: wrap;
         }
@@ -49,10 +91,14 @@
         .card {
             background: #f7f7f7;
             width: 300px;
-            padding: 25px;
+            padding: 30px 25px;
             border-radius: 12px;
             text-align: center;
             box-shadow: 0 2px 12px rgba(0,0,0,0.06);
+        }
+
+        .card img {
+            margin-bottom: 15px;
         }
 
         .card h3 {
@@ -60,6 +106,7 @@
             margin-bottom: 12px;
         }
 
+        /* WHY */
         .why {
             max-width: 900px;
             margin: 80px auto;
@@ -67,54 +114,125 @@
             padding: 0 20px;
         }
 
+        .why ul {
+            list-style: none;
+            padding: 0;
+            margin-top: 20px;
+            font-size: 1.1rem;
+        }
+
+        .why li {
+            margin: 8px 0;
+        }
+
+        /* CONTACT FORM */
+        .contact {
+            background: #f7f7f7;
+            padding: 70px 20px;
+            text-align: center;
+        }
+
+        form {
+            max-width: 450px;
+            margin: 30px auto 0;
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        input, textarea {
+            padding: 14px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            font-size: 1rem;
+            width: 100%;
+            font-family: inherit;
+        }
+
+        button {
+            background: #0ECC70;
+            color: white;
+            border: none;
+            padding: 14px;
+            font-size: 1.1rem;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: 600;
+        }
+
+        button:hover {
+            opacity: 0.9;
+        }
+
+        /* FOOTER */
         footer {
             background: #0ECC70;
             color: white;
-            padding: 30px;
+            padding: 32px;
             text-align: center;
-            margin-top: 80px;
+            font-size: 0.95rem;
+            margin-top: 60px;
         }
     </style>
 </head>
 <body>
 
-<header>
-    <h1>Turtlo</h1>
-    <h2>Nutikad digilahendused, mis aitavad sinu ettevõttel kasvada</h2>
-    <p>Meta reklaamid · Google Ads · SEO</p>
-    <a class="cta" href="#contact">Võta ühendust</a>
-</header>
+    <nav class="navbar">
+        <a href="#">Avaleht</a>
+        <a href="#contact">Võta ühendust</a>
+    </nav>
 
-<section class="services">
-    <div class="card">
-        <h3>Meta reklaamid</h3>
-        <p>Tõstame nähtavust ja loome konversioone Facebookis & Instagramis täpselt õigete inimesteni jõudes.</p>
-    </div>
-    <div class="card">
-        <h3>Google Ads</h3>
-        <p>Reklaamid seal, kus kliendid juba otsivad. Optimeerime tulemusi pärisandmete põhjal.</p>
-    </div>
-    <div class="card">
-        <h3>SEO</h3>
-        <p>Orgaaniline kasv, mis kestab. Sisutöö, tehniline SEO ja kodulehe optimeerimine.</p>
-    </div>
-</section>
+    <header>
+        <h1>Turtlo</h1>
+        <h2>Nutikad digilahendused, mis aitavad sinu ettevõttel kasvada</h2>
+        <p>Meta reklaamid · Google Ads · SEO</p>
+        <a class="cta" href="#contact">Võta ühendust</a>
+    </header>
 
-<section class="why">
-    <h2>Miks valida Turtlo?</h2>
-    <p>Me ei tee üleliigset, ainult seda, mis töötab. Keskendume mõõdetavatele tulemustele, läbipaistvusele ja pikaajalisele partnerlusele.</p>
-    <ul style="list-style: none; padding: 0; margin-top: 20px;">
-        <li>✔ Tulemustele suunatud strateegia</li>
-        <li>✔ Läbipaistev raport ja suhtlus</li>
-        <li>✔ Paindlik ja kiire reageerimine</li>
-    </ul>
-</section>
+    <section class="services">
+        <div class="card">
+            <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" width="60" alt="Meta Ads">
+            <h3>Meta reklaamid</h3>
+            <p>Tõstame nähtavust ja konversioone Facebookis & Instagramis — täpselt õigete inimesteni jõudes.</p>
+        </div>
+        <div class="card">
+            <img src="https://cdn-icons-png.flaticon.com/512/300/300221.png" width="60" alt="Google Ads">
+            <h3>Google Ads</h3>
+            <p>Reklaamid seal, kus kliendid juba otsivad. Optimeerime tulemusi pärisandmete põhjal.</p>
+        </div>
+        <div class="card">
+            <img src="https://cdn-icons-png.flaticon.com/512/1006/1006771.png" width="60" alt="SEO">
+            <h3>SEO</h3>
+            <p>Orgaaniline kasv, mis kestab pikas perspektiivis — sisutöö ja tehniline optimeerimine.</p>
+        </div>
+    </section>
 
-<footer id="contact">
-    <h3>Räägime sinu eesmärkidest</h3>
-    <p>Võta ühendust: <strong>info@turtlo.com</strong></p>
-</footer>
+    <section class="why">
+        <h2>Miks valida Turtlo?</h2>
+        <p>Me ei tee üleliigset — ainult seda, mis päriselt töötab. Läbipaistev kommunikatsioon ja andmepõhised tulemused.</p>
+        <ul>
+            <li>✔ Tulemustele suunatud strateegia</li>
+            <li>✔ Läbipaistev raport ja suhtlus</li>
+            <li>✔ Paindlik ja kiire reageerimine</li>
+        </ul>
+    </section>
 
+    <section id="contact" class="contact">
+        <h2>Võta ühendust</h2>
+        <p>Räägime sinu eesmärkidest ja paneme plaani paika 🙌</p>
+
+        <!-- Asenda "yourFormID" Formspree URL-iga -->
+        <form action="https://formspree.io/f/yourFormID" method="POST">
+            <input type="text" name="name" placeholder="Nimi" required>
+            <input type="email" name="email" placeholder="Email" required>
+            <textarea name="message" placeholder="Sõnum" rows="5" required></textarea>
+            <button type="submit">Saada päring</button>
+        </form>
+    </section>
+
+    <footer>
+        © 2025 Turtlo — Digiturundusagentuur
+    </footer>
 
 </body>
 </html>
