--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@ footer {
         <source src="video/vid.mp4" type="video/mp4">
         Sinu brauser ei toeta videot.
     </video>
-    <h1>Turtlo — Veebiturundus, mis liigub edasi</h1>
-    <p>Aitame sinu ettevõttel kasvada Meta ja Google reklaamide ning SEO abil.</p>
+    <h1>Strateegiline veebiturundus, mis kasvatab sinu äri</h1>
+    <p>Teeme sinu ettevõtte internetis nähtavaks Meta ja Google reklaamide ning SEO abil.</p>
     <a href="#contact" class="cta-btn">Võta ühendust</a>
 </header>
 
@@ -235,7 +235,7 @@ footer {
 </section>
 
 <footer>
-    © 2025 Turtlo OÜ – kõik õigused kaitstud
+    © 2025 GMFB OÜ – kõik õigused kaitstud
 </footer>
 
 </body>
