--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ footer {
         Sinu brauser ei toeta videot.
     </video>
     <h1>Strateegiline veebiturundus, mis kasvatab sinu äri</h1>
-    <p>Teeme sinu ettevõtte internetis nähtavaks Meta ja Google reklaamide ning SEO abil.</p>
+    <p>Teeme sinu ettevõtte internetis nähtavaks Meta ja Google reklaamide ning SEO abil</p>
     <a href="#contact" class="cta-btn">Võta ühendust</a>
 </header>
 
@@ -205,19 +205,19 @@ footer {
         <div class="service-card">
             <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Meta Ads">
             <h3>Meta Reklaamid</h3>
-            <p>Facebook & Instagram reklaamikampaaniad, mis toovad tulemusi.</p>
+            <p>Facebook & Instagram reklaamikampaaniad, mis toovad tulemusi</p>
         </div>
 
         <div class="service-card">
             <img src="https://cdn-icons-png.flaticon.com/512/281/281769.png" alt="Google Ads">
             <h3>Google Ads</h3>
-            <p>Efektiivne reklaam Google otsingus ja partnervõrgustikus.</p>
+            <p>Efektiivne reklaam Google otsingus ja partnervõrgustikus</p>
         </div>
 
         <div class="service-card">
             <img src="https://cdn-icons-png.flaticon.com/512/1006/1006771.png" alt="SEO">
             <h3>SEO Optimeerimine</h3>
-            <p>Liigu otsingutulemustes ettepoole ja too rohkem orgaanilist liiklust.</p>
+            <p>Liigu otsingutulemustes ettepoole ja too rohkem orgaanilist liiklust</p>
         </div>
     </div>
 </section>
